--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password">Password</string>
     <string name="rember_me">Rember me</string>
     <string name="login">Login</string>
+    <string name="sing_in">Sing in</string>
+    <string name="i_already_have_an_account">I already have an account?</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
 </resources>
