--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sing_in">Sing in</string>
     <string name="i_already_have_an_account">I already have an account?</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="delete">Delete</string>
 </resources>
